--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.html
@@ -1,3 +1,4 @@
+<div class="back" [routerLink]="['/category']"><mat-icon>close</mat-icon></div>
 <mat-card class="parent">
   <mat-form-field class="textarea">
     <textarea
@@ -78,3 +79,4 @@
     POST
   </button>
 </mat-card>
+
