--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.css
@@ -53,8 +53,9 @@
   margin-right: 10px;
 }
 
-.back{
+.close{
   cursor: pointer;
+  outline: none;
   font-size: medium;
   color: #1776bf;
   font-family: Roboto, Helvetica, Arial, sans-serif;
