--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.css
@@ -1,7 +1,7 @@
 .parent {
   display: flex;
   flex-direction: column;
-  width: 70%;
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 24px;
@@ -15,6 +15,7 @@
 
 .richtexteditor {
   align-self: center;
+  z-index: 0;
 }
 .search {
   width: 100%;
