--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.html
@@ -2,12 +2,7 @@
   <div class="parent">
     <app-search class="app-search"></app-search>
     <div class="toolbar"></div>
-    <div class="breadcrumbs">
-      <!-- <ol class="dlt-breadcrumbs" aria-label="breadcrumb">
-      <li><a [routerLink]="['']" class="dlt-links">Home</a></li>
-      <li><a [routerLink]="['/categories']" class="dlt-links">Categories</a></li>
-      <li><a [routerLink]="['/categories', category]" class="dlt-links">{{getCategory()}}</a></li>
-     </ol> -->
+    <!-- <div class="breadcrumbs">
       <ul class="breadcrumb">
         <li><span [routerLink]="['']">Home</span></li>
         <li><span [routerLink]="['/category']">Categories</span></li>
@@ -17,8 +12,12 @@
           }}</span>
         </li>
       </ul>
-    </div>
+    </div> -->
   </div>
 
-  <router-outlet></router-outlet>
+  <div class="main-layout">
+    <app-filters></app-filters>
+    <mat-divider [vertical]="true"></mat-divider>
+    <div class="router"><router-outlet></router-outlet></div>
+  </div>
 </div>
