--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.css
@@ -1,11 +1,11 @@
 .parent {
   display: flex;
-  justify-content: center;
   margin-top: 20px;
 }
 
 .layout {
-  width: 800px;
+  width: 90%;
+  justify-content: center;
 }
 
 .answers {
