--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.html
@@ -1,7 +1,7 @@
 <div class="parent">
   <mat-card class="layout">
     <div class="question">{{ response.Question.question }}</div>
-    <div class="description">{{ response.Question.description }}</div>
+    <div class="description" [innerHTML]="response.Question.description"></div>
     <div>
       <span
         *ngFor="let tag of response.tags"
@@ -42,6 +42,8 @@
     </div>
     <div>
       <ejs-richtexteditor
+        #imageRTE
+        id="imageRTE"
         class="richtexteditor"
         width="100%"
         height="350px"
