--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/questions-list/questions-list.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/questions-list/questions-list.component.css
@@ -1,11 +1,11 @@
 .list-of-questions {
     display: flex;
     justify-content: center;
+    width: 100%;
   }
   .question-card {
     margin-bottom: 10px;
     margin-top: 10px;
-    width: max-content;
     height: max-content;
   }
   .question-item {
