--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-question-dialog/add-question-dialog.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-question-dialog/add-question-dialog.component.css
@@ -129,6 +129,10 @@
     font-weight: 400;
     display: block;
   }
+
+  .richtexteditor {
+    align-self: center;
+  }
   
   .profile-img {
     width: 96px;
