--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-question-dialog/add-question-dialog.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-question-dialog/add-question-dialog.component.css
@@ -10,6 +10,9 @@
     justify-content: center;
     flex-wrap: wrap;
   }
+  .parent{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
   .button {
     margin-top: 15px;
     border-radius: 15px;
@@ -18,7 +21,32 @@
     padding: 10px;
     /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
   }
-  
+  .item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .fileitem{
+    background-color: lightgrey;
+    border-radius: 4px;
+    width: max-content;
+    padding-left: 4px;
+    margin-top: 4px;
+  }
+  .upload-table{
+    font-size: small;
+    font-weight: bold;
+    margin-left: 16px;
+  }
+  .filedrop{
+    /* background-color: lightgreen; */
+    width: 95%;
+    max-height: 50px;
+    margin-left: 16px;
+    margin-right: 16px;
+    align-self: center;
+  }
+
   .button:hover {
     margin-top: 15px;
     border-radius: 15px;
