UI Changes: 1. Adding attachments. 2. Categorizing menu.

--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.html
@@ -1,23 +1,1 @@
-<div>
-  <div class="parent">
-    <app-search class="app-search"></app-search>
-    <div class="toolbar"></div>
-    <!-- <div class="breadcrumbs">
-      <ul class="breadcrumb">
-        <li><span [routerLink]="['']">Home</span></li>
-        <li><span [routerLink]="['/category']">Categories</span></li>
-        <li>
-          <span [routerLink]="['/category', category]">{{
-            getCategory()
-          }}</span>
-        </li>
-      </ul>
-    </div> -->
-  </div>
-
-  <div class="main-layout">
-    <app-filters></app-filters>
-    <mat-divider [vertical]="true"></mat-divider>
-    <div class="router"><router-outlet></router-outlet></div>
-  </div>
-</div>
+<app-main></app-main>
