--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.html
@@ -1,4 +1,4 @@
-<div class="close" [routerLink]="['/category']"><mat-icon>close</mat-icon></div>
+<div class="close" [routerLink]="['/main/category']"><mat-icon>close</mat-icon></div>
 <mat-card class="parent">
   <mat-form-field class="textarea">
     <textarea
