--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.html
@@ -9,11 +9,11 @@
         <div class="question-layout">
           <a
             class="question"
-            [routerLink]="['/qna', list.Question.id]"
+            [routerLink]="['/main/qna', list.Question.id]"
             (click)="onClick(list.Question.id)"
             >{{ list.Question.question }}</a
           >
-          <div class="description"[routerLink]="['/qna', list.Question.id]"  (click)="onClick(list.Question.id)">{{list.Question.description}}</div>
+          <div class="description"[routerLink]="['/main/qna', list.Question.id]"  (click)="onClick(list.Question.id)">{{list.Question.description}}</div>
           <span
             *ngFor="let tag of getTags(list.tags)"
             class="chips"
