--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/filters/filters.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/filters/filters.component.html
@@ -1,7 +1,7 @@
 <div class="breadcrumbs">
   <!-- <div class="span" [routerLink]="['']" ><mat-icon class="icon">home</mat-icon><div class="text">Home</div></div> -->
   <!-- <div class="span" [routerLink]="['/dashboard']" ><mat-icon class="icon">dashboard</mat-icon><div class="text">Dashboard</div></div> -->
-  <div class="span" [routerLink]="['/category']">
+  <div class="span" [routerLink]="['/main/category']">
     <mat-icon class="icon">category</mat-icon>
     <div class="text">Categories</div>
   </div>
