--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/login/login.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/login/login.component.html
@@ -1,40 +1,38 @@
-
 <div class="parent">
-        <h2>Welcome</h2>
-        <h1>PLEASE LOG IN</h1>
-
-        <mat-card id="log" >
-            
-                    <div class="dlt-input-group lg-input">
-                        
-                        <span class="dlt-input-addon">
-                            <mat-icon id="icon">person</mat-icon>
-                        </span>
-                        <div class="dlt-form-item">
-                            <div class="dlt-form-group">
-                                <input id="username" type="text" required class="dlt-text-input" placeholder="Username" required>       
-                            </div>
-                        </div>  
-                    </div>
-                    <div class="dlt-input-group lg-input">
-                        
-                        <span class="dlt-input-addon lock">
-                            <mat-icon id="icon">lock</mat-icon>
-                        </span>
-                        <div class="dlt-form-item">
-                            <div class="dlt-form-group">
-                                <input id="password" type="password" required class="dlt-text-input" placeholder="Password" required>
-                            
-                            </div>
-                        </div>
-                        
-                    </div>
-
-                    <button class="dlt-button dlt-button-primary lg-button" (click)="login()">Log In</button> 
-                   
-                    <mat-error *ngIf="response == true">
-                        Invalid Credentials !!
-                    </mat-error>
-                
-        </mat-card>
+  <mat-card class="block">
+    <div>
+      <div class="headers">
+        <div class="h1">Welcome</div>
+        <div class="h2">PLEASE LOG IN</div>
+      </div>
+      <div class="item">
+        <mat-icon class="icon">person</mat-icon>
+        <input
+          class="input-div"
+          id="username"
+          type="text"
+          required
+          placeholder="Username"
+          required
+        />
+      </div>
+      <div class="item">
+        <mat-icon class="icon">lock</mat-icon>
+        <input
+          id="password"
+          type="password"
+          required
+          class="input-div"
+          placeholder="Password"
+          required
+        />
+      </div>
+      <mat-error
+        style="margin-left: 16px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-size: small;"
+        *ngIf="response === 'true'" >
+        Invalid Credentials !!
+      </mat-error>
+      <button mat-button class="loginbutton" (click)="login()">LOG IN</button>
+    </div>
+  </mat-card>
 </div>
