--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/login/login.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/login/login.component.css
@@ -1,347 +1,72 @@
-
-#log{
-    height: 230px;
-    width: 270px;
-    text-align: center;
-    left: 550px;
-    margin-top:0px;
-    border: 1px solid #ccc;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+.block {
+  width: 400px;
+  height: 320px;
+  margin: auto;
+  display: inline-block;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.input-div {
+  border: none;
+  width: 100%;
+  outline: none;
+  margin-left: 10px;
 }
 
-h2{
-   
-    text-transform: uppercase;
-    font-size: 2.143em;
-    font-weight: 700;
-    font-family:Arial, Helvetica, sans-serif;
-    color:#1776bf !important;
-    margin-left: 550px;
-    margin-top:100px;
-    height: 20px;
-    width:342px;
-    text-shadow:rgba(0, 0, 0, 0.1) 0px 1px 0px;
+.headers {
+  margin-left: 16px;
+  margin-top: 16px;
+  align-self: center;
+  flex-direction: column;
+  align-self: center;
+  width: max-content;
 }
 
-h1{
-    
-    text-transform: uppercase;
-    font-size: 2.143em;
-    font-family:Arial, Helvetica, sans-serif;
-    color:black;
-    font-weight: 400;
-    line-height: 1.2;
-    display: block;
-    font-size: 2em;
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    margin-left: 550px;
-    margin-top: 0;
-    text-shadow:rgba(0, 0, 0, 0.1) 0px 1px 0px;
-
+.item {
+  display: flex;
+  margin-top: 16px;
+  border-style: solid;
+  border-width: thin;
+  margin: 16px;
+}
+.parent {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: #1776bf;
 }
 
-
-.dlt-form-number-item {
-    width: 100%
+.h1 {
+  text-transform: uppercase;
+  font-size: xx-large;
+  font-weight: bolder;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #1776bf;
 }
 
-.dlt-form-label {
-    display: inline-block;
-    vertical-align: baseline;
-    font-weight: 500;
-    font-size: .875rem;
-    line-height: 1;
-    color: #333;
-    padding-bottom: .25rem;
-    margin: 0
+.h2 {
+  margin-top: 10px;
+  font-size: large;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  font-weight: 400;
 }
 
-/* #text-price-3{
-background-repeat: no-repeat;
-background-position: 10px;
-background-color: #fff;
-height: 50px;
-border: 1px solid #ccc;
-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-} */
-
-
-.dlt-input-group {
-    display: flex;
-    flex-flow: row wrap;
-    flex: 1 100%;
-
-   
-   
+.loginbutton {
+  background-color: #1776bf;
+  color: #fff;
+  width: 100%;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  height: 50px;
+  /* bottom: 16px; */
 }
-#icon{
-margin-top: 10px;
-color:#1776bf;
+.icon {
+  color: #1776bf;
+  padding: 10px;
 }
-
-.dlt-input-group .dlt-input-addon {
-    background:white;
-    border: 1px solid #ccc;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    border-right: 0;
-    height: 50px;
-    min-width: 2rem;
-    padding: 0 .725rem;
-    line-height: 1.875rem;
-    text-align: center;
-    z-index: 1
-}
-
-.dlt-input-group.lg-input .dlt-input-addon {
-
-    min-width: 2.5rem;
-    font-size: .875rem;
-    line-height: 2.4rem
-}
-
-.dlt-input-group .dlt-form-item+.dlt-input-addon {
-    border-left: 0;
-    border-right: 1px solid #666
-}
-
-.dlt-input-group [type=reset],
-.dlt-input-group [type=submit],
-.dlt-input-group button.dlt-button {
-    align-self: flex-start
-}
-
-
-
-
-.dlt-form-group {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: 100%
-}
-
-.dlt-form-group[disabled=disabled] {
-    opacity: .5;
-    cursor: not-allowed
-}
-
-.dlt-form-group[disabled=disabled] .dlt-button {
-    pointer-events: none
-}
-
-.dlt-form-group .dlt-text-input {
-    position: relative;
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    font-weight: 400;
-    font-size: .875rem;
-    line-height: 1.875rem;
-    height: 50px;
-    padding: 0 .5rem;
-    color: #333;
-    background-color: #fff;
-    border-radius: 0;
-    border: 1px solid #ccc;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    border-left:0;
-}
-
-.dlt-form-group .dlt-text-input[type=text] {
-    padding-right: 1.8rem;
-    
-}
-
-.dlt-form-group .dlt-text-input.dlt-search,
-.dlt-form-group .dlt-text-input.unmasked,
-.dlt-form-group .dlt-text-input[type=password] {
-    padding-right: 3.4rem
-}
-
-.dlt-form-group .dlt-text-input::-ms-clear {
-    display: none
-}
-
-.dlt-form-group .dlt-text-input::-ms-reveal {
-    display: none
-}
-
-.dlt-form-group .dlt-text-input::placeholder {
-    font-style: italic;
-    color: #666
-}
-
-.dlt-form-group .dlt-text-input:disabled {
-    cursor: not-allowed
-}
-
-.dlt-form-group .dlt-text-input:active:enabled,
-.dlt-form-group .dlt-text-input:focus {
-    border: 1px solid #1776bf;
-    outline: 1px solid #1776bf;
-    outline-offset: -2px;
-    box-shadow: 0 .18rem 0 0 transparent
-}
-
-.dlt-form-group .dlt-text-input:not(:valid)~.clear-icon {
-    display: none
-}
-
-.dlt-form-group .dlt-text-input:not(:valid)~.password-clear-icon {
-    display: none
-}
-
-.dlt-form-group:not(:focus-within) .dlt-text-input~.clear-icon {
-    display: none
-}
-
-.lock{
-    margin-top: 20px;
-    color:#1776bf;
-    background-color: white;
-    border:transparent;
-}
-
-
-#password{
-    margin-top: 20px;
-    width:138.85px;
-
-}
-
-#username{
-    width:100%;
-}
-.dlt-button {
-    color: #1776bf;
-    text-decoration: none;
-    padding: 0 .75rem;
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    font-weight: 400;
-    line-height: 30px;
-    -moz-transition: .25s ease-in;
-    -o-transition: .25s ease-in;
-    -webkit-transition: .25s ease-in;
-    transition: .25s ease-in;
-    cursor: pointer;
-    border: 1px solid transparent;
-    outline: 1px solid transparent;
-    outline-offset: -2px;
-    margin: 0;
-    display: inline-block;
-    margin-top:20px;
-    font-size: 1.429em;
-    font-weight: 400;
-    text-align: center;
-    width:270px;
-    height: 50px;
-    border: 0;
-}
-
-.dlt-button-primary {
-    color: #fff;
-    background-color: #1776bf;
-
-}
-
-.dlt-button-primary:focus,
-.dlt-button-primary:hover:not(:active):enabled {
-    color: #1776bf;
-    background-color: #fff;
-    border: 1px solid #1776bf;
-    outline: 1px solid #1776bf;
-    outline-offset: -2px
-}
-
-.dlt-button-primary:disabled {
-    opacity: .5;
-    cursor: not-allowed
-}
-
-.dlt-button-primary:active {
-    background-color: #0f4c7b;
-    border-color: #0f4c7b;
-    outline: 0;
-    color: #fff;
-
-}
-
-/* #link{
-    color:#1776bf;
-    cursor: pointer;
- padding-right: 136px;
-} */
-/* .dlt-dropdown {
-    display: inline-block;
-    position: relative
-}
-
-.dlt-dropdown-icon {
-    position: absolute;
-    font-size: 1.2rem;
-    float: right;
-    margin-left: .2rem;
-    margin-top: .09rem
-}
-
-.dlt-dropdown-primary {
-    display: inline-block;
-    padding: 0 1.875rem 0 1rem;
-    color: #fff;
-    background-color: #1776bf;
-    border-color: #1776bf;
-    cursor: pointer;
-    white-space: nowrap;
-    outline: 1px solid transparent;
-    line-height: 1.9rem
-}
-
-.dlt-dropdown-primary:enabled:hover,
-.dlt-dropdown-primary:focus {
-    background-color: #fff;
-    color: #1776bf;
-    border: 1px solid #1776bf;
-    outline: 1px solid #1776bf;
-    outline-offset: -2px
-}
-
-.dlt-dropdown-primary:active {
-    color: #fff!important;
-    background-color: #0f4c7b!important;
-    outline: 1px solid transparent!important;
-    border-color: #0f4c7b!important
-}
-
-.dlt-dropdown-primary:disabled {
-    opacity: .5;
-    cursor: not-allowed
-}
-.dlt-overflow-menu {
-    position: absolute;
-    display: none;
-    height: 14.5rem;
-    width: auto;
-    white-space: nowrap;
-    margin: 0;
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    font-size: .875rem;
-    color: #333;
-    background: #fff;
-    -webkit-box-shadow: 0 .03rem .25rem 0 rgba(0, 0, 0, .5);
-    -moz-box-shadow: 0 .03rem .25rem 0 rgba(0, 0, 0, .5);
-    box-shadow: 0 .03rem .25rem 0 rgba(0, 0, 0, .5);
-    list-style-type: none;
-    z-index: 2;
-    top: 2.125rem;
-    right: -.875rem;
-    background: #fff;
-    -webkit-filter: drop-shadow(0 0 0 rgba(0, 0, 0, .5));
-    -moz-filter: 0 0 0 rgba(0, 0, 0, .5);
-    filter: drop-shadow(0 0 0 rgba(0, 0, 0, .5));
-    padding: .5rem 0
-}
-.dlt-overflow-menu .solid-line {
-    border-top: 1px solid #cccccb;
-    margin: .5rem 0
-} */
